--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
     <br>
     <div class="top-rank">
       <span class="number-one">№ 1 в інтернеті ще в <span id="current-year"></span></span>
-      <span class="thank-you">Бо Всесвiт даруe свiтло лише очищеним душам!</span>
+      <span class="thank-you">Бо Всесвiт даруе свiтло лише очищеним душам!</span>
     </div>
     <br><br><br>
     <h1 aria-label="Звільніться від навіювань за допомогою ритуалу швидкого зняття порчі та захисту">Звільніться від навіювань за допомогою ритуалу швидкого зняття порчі та захисту</h1>
